--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -57,25 +57,41 @@
 
 		section {
 			flex-grow: 1;
-			max-width: 500px;
 			display: flex;
-			flex-direction: column;
-			justify-content: center;
+			align-items: center;
 			font-size: 1.15rem;
 
-			h3 {
-				margin: 1rem 0;
-				font-size: 2rem;
+			div:first-child {
+				max-width: 500px;
+				position: relative;
+				display: flex;
+				justify-content: center;
+				padding: 0;
 
-				span {
-					color: $yellow;
+				h3 {
+					margin: 1rem 0;
+					font-size: 2rem;
+
+					span {
+						color: $yellow;
+					}
+				}
+
+				div {
+					max-height: 50px;
+					width: 1rem;
+					position: relative;
+					margin-top: 5rem;
 				}
 			}
 
-			div {
-				max-height: 50px;
+			div:last-child {
+				flex: 1;
 				position: relative;
-				margin-top: 5rem;
+				display: flex;
+				justify-content: center;
+				align-items: flex-end;
+				padding: 0;
 			}
 		}
 	}
@@ -86,6 +102,7 @@
 	position: absolute;
 	left: 0;
 	bottom: 0;
+	width: 3rem;
 }
 
 @keyframes MoveUpDown {
