--- a/src/components/posts/AllPosts.module.scss
+++ b/src/components/posts/AllPosts.module.scss
@@ -28,6 +28,16 @@
 				display: flex;
 				flex-direction: column;
 				justify-content: space-evenly;
+
+				h3 {
+					font-weight: 400;
+				}
+
+				p:last-child {
+					font-style: italic;
+					letter-spacing: 7px;
+					font-size: 0.8rem;
+				}
 			}
 
 			div {
