--- a/src/components/posts/AllPosts.module.scss
+++ b/src/components/posts/AllPosts.module.scss
@@ -6,20 +6,31 @@
 		display: flex;
 		flex-wrap: wrap;
 
+		a {
+			color: inherit;
+			text-decoration: none;
+			margin-right: 10px;
+			margin-bottom: 2rem;
+			border-radius: 9px;
+			transition: all 0.5s ease-out;
+		}
+
+		a:hover {
+			box-shadow: 5px 7px 7px #aaa, 0px 0px 0px transparent;
+		}
+
 		article {
 			background: $light-grey;
+			border-radius: 9px;
 			flex-basis: 600px;
 			flex-grow: 1;
 			flex-shrink: 1;
 			max-height: min-content;
 			display: flex;
-			margin-right: 10px;
-			margin-bottom: 2rem;
-			border-radius: 9px;
 
 			div,
 			section {
-				max-height: 9rem;
+				max-height: 14rem;
 			}
 
 			section {
@@ -41,13 +52,15 @@
 			}
 
 			div {
-				max-width: 9rem;
+				max-width: 10rem;
 				display: flex;
 				align-items: center;
 				justify-content: center;
 
 				img {
 					max-height: 100%;
+					max-width: 9rem;
+					border-radius: 9px;
 				}
 			}
 		}
