--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -28,7 +28,7 @@
 			font-size: 1.15rem;
 
 			div:first-child {
-				max-width: 500px;
+				width: 308px;
 				position: relative;
 				display: flex;
 				justify-content: center;
@@ -58,6 +58,10 @@
 				justify-content: center;
 				align-items: flex-end;
 				padding: 0;
+
+				img {
+					max-width: 100%;
+				}
 			}
 		}
 	}
